# FerroVela

./: .gitignore  AGENTS.md  ANALYSIS_COMPLETE.md  BEFORE_AFTER_EXAMPLES.md  CHANGELOG.md  CHECKLIST_AND_VERIFICATION.md  Cargo.toml  IMPROVEMENT_SUMMARY.md  Info.plist  MASTER_INDEX.md  OPTIMIZATION_CHANGES.md  PERFORMANCE_ANALYSIS.md  QUICK_REFERENCE.md  README.md  README_DOCUMENTATION.md  START_HERE.md  VISUAL_SUMMARY.md  bench_output.txt  build.rs  bundle.sh  config.json  config.toml  plan.md  test_musli.rs
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: bump-version.yaml  release.yaml.disabled  tag.yaml  test.yaml  unit-test.yaml
benches/: connect_bench.rs  connect_bench_v2.rs  exception_bench.rs  musli_vs_serde_bench.rs  pac_bench.rs  parse_content_length_bench.rs  request_bench.rs  subsequence_bench.rs
crates/ferrovela/: Cargo.toml
crates/ferrovela-app/: Cargo.toml
crates/ferrovela-app/assets/: icon.icns
crates/ferrovela-app/src/: main.rs
crates/ferrovela-lib/: Cargo.toml
crates/ferrovela-lib/benches/: connect_bench.rs  connect_bench_v2.rs  parse_content_length_bench.rs  request_bench.rs  subsequence_bench.rs
crates/ferrovela-lib/src/: config.rs  launchd.rs  lib.rs  logger.rs  pac.rs
crates/ferrovela-lib/src/auth/: basic.rs  kerberos.rs  mock_kerberos.rs  mod.rs  ntlm.rs
crates/ferrovela-lib/src/proxy/: auth_tunnel.rs  http_utils.rs  mod.rs  ssrf.rs
crates/ferrovela-lib/src/tests/: auth_tests.rs  connect_tests.rs  http_proxy_tests.rs  main_tests.rs  mod.rs  performance_tests.rs  ssrf_tests.rs
crates/ferrovela-ui/: Cargo.toml  build.rs  entitlements.plist
crates/ferrovela-ui/src/: main.rs
crates/ferrovela-ui/src/tests/: mod.rs  ui_tests.rs
crates/ferrovela-ui/src/ui/: auth.rs  controller.rs  mod.rs  model.rs  view.rs
crates/ferrovela/src/: main.rs
scripts/: resign.sh
service/macos/: com.ferrovela.plist.template  install.sh
specification/: comparison.md  ferrovela_current_state.md  g3proxy_specification.md  gap_analysis.md  keyring_integration.md  linkerd_nodelay_adaptation.md  musli_performance_results.md  pingora_evaluation.md  pingora_runtime_fix.md  preproxy_analysis.md  preproxy_specs.md  proxy_engine_implementation.md  roadmap.md
src/: bin_test.rs  check_id.rs  config.rs  launchd.rs  lib.rs  logger.rs  main.rs  pac.rs  proxy.rs  tests.rs  ui.rs
src/auth/: basic.rs  kerberos.rs  mock_kerberos.rs  mod.rs  ntlm.rs
src/proxy/: auth_tunnel.rs  connect.rs  http_utils.rs  mod.rs  nonconnect.rs  shutdown.rs
src/tests/: auth_tests.rs  connect_tests.rs  http_proxy_tests.rs  main_tests.rs  mod.rs  pac_perf_test.rs  performance_tests.rs  ssrf_tests.rs  streaming_benchmark.rs  ui_tests.rs
src/ui/: controller.rs  mod.rs  model.rs
