[workspace]
members = [
    "crates/ferrovela-lib",
    "crates/ferrovela",
    "crates/ferrovela-ui",
    "crates/ferrovela-app",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
keyring = "3.6.*"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = "debuginfo"
