[workspace]
members = [
    "crates/ferrovela-lib",
    "crates/ferrovela",
    "crates/ferrovela-ui",
]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
keyring = "3.6.*"
log = "0.4"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = "debuginfo"
