[package]
name = "ferrovela-app"
version = "0.3.4"
edition = "2021"

[package.metadata.bundle]
identifier = "com.ictcloud.ferrovela"
name = "FerroVela"
icon = ["/assets/icon.icns"]
copyright = "Copyright (c) 2026 Pascal Rudnik"
category = "public.app-category.utilities"
short_description = "Small forward proxy for enterprise settings."
long_description = "Small forward proxy for enterprise settings with extensive functionality."

[dependencies]
ferrovela-lib = { path = "../ferrovela-lib" }
anyhow.workspace = true
