[package]
name = "ferrovela-lib"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "io-util", "macros"] }
bytes = "1"
log.workspace = true
anyhow.workspace = true
rquickjs = { version = "0.11", features = ["bindgen"] }
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
libgssapi = { version = "0.9", default-features = false }
ntlmclient = "0.2.*"
memchr = "2.8.*"
glob = "0.3.*"
keyring.workspace = true
rama = { version = "0.2", features = ["http-full"] }
url = "2"
libc = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tempfile = "3.25.0"

[lib]
name = "ferrovela_lib"
path = "src/lib.rs"

[[bench]]
name = "connect_bench"
harness = false

[[bench]]
name = "subsequence_bench"
harness = false
path = "benches/subsequence_bench.rs"

[[bench]]
name = "parse_content_length_bench"
harness = false
path = "benches/parse_content_length_bench.rs"

[[bench]]
name = "request_bench"
harness = false
path = "benches/request_bench.rs"

[[bench]]
name = "connect_bench_v2"
harness = false
path = "benches/connect_bench_v2.rs"
