[package]
name = "ferrovela-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true


[package.metadata.bundle]
identifier = "com.ictcloud.ferrovela"
name = "FerroVela"
icon = ["crates/ferrovela-ui/assets/icon.icns"]
copyright = "Copyright (c) 2026 Pascal Rudnik"
category = "public.app-category.utilities"
short_description = "Small forward proxy for enterprise settings."
long_description = "Small forward proxy for enterprise settings with extensive functionality."

[dependencies]
ferrovela-lib = { path = "../ferrovela-lib" }
iced = { version = "0.14", features = ["tokio"] }
keyring.workspace = true
libc = "0.2"
log.workspace = true
tokio.workspace = true
