[package]
name = "ferrovela"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true


[dependencies]
ferrovela-lib = { path = "../ferrovela-lib" }
tokio.workspace = true
log.workspace = true
